--- a/React/package.json
+++ b/React/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ctrl/tinycolor": "^3.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,7 +15,11 @@
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.16.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
+    "json2mq": "^0.2.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
