--- a/Nestjs/package.json
+++ b/Nestjs/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-ws": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.18",
     "class-transformer": "^0.4.0",
