--- a/React/package.json
+++ b/React/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.11"
+    "@types/react": "^17.0.11",
+    "style-loader": "^1.3.0"
   }
 }
