--- a/Nestjs/package.json
+++ b/Nestjs/package.json
@@ -36,11 +36,13 @@
     "cookie-parser": "^1.4.5",
     "js-cookie": "^2.2.1",
     "multer": "^1.4.2",
+    "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.5.0",
     "pg": "^8.6.0",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
