--- a/React/package.json
+++ b/React/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^2.2.1",
     "json2mq": "^0.2.0",
     "popper.js": "^1.16.1",
+    "qrcode": "^1.4.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
