--- a/React/package.json
+++ b/React/package.json
@@ -16,14 +16,17 @@
     "antd": "^4.16.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "bootstrap-select": "^1.13.18",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "json2mq": "^0.2.0",
+    "multiselect-react-dropdown": "^2.0.4",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-multiselect": "^2.4.1",
     "react-dom": "^17.0.2",
+    "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
@@ -54,6 +57,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.11"
+    "@types/react": "^17.0.11",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
