--- a/Nestjs/package.json
+++ b/Nestjs/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.18",
     "@types/multer": "^1.4.6",
+    "base32-encode": "^1.2.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
