--- a/React/package.json
+++ b/React/package.json
@@ -29,6 +29,7 @@
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typeorm": "^0.2.34",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
