--- a/React/package.json
+++ b/React/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "json2mq": "^0.2.0",
+    "multiselect-react-dropdown": "^2.0.4",
     "popper.js": "^1.16.1",
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
