--- a/Nestjs/package.json
+++ b/Nestjs/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^8.0.0",
     "@nestjs/platform-ws": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.18",
@@ -68,6 +69,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "socket.io": "^4.1.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
