--- a/Nestjs/package.json
+++ b/Nestjs/package.json
@@ -31,8 +31,11 @@
     "@nestjs/platform-ws": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.18",
+    "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.6",
     "base32-encode": "^1.2.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
