--- a/React/package.json
+++ b/React/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.16.3",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
